fix line spacing

--- a/themes/adidoks/sass/common/_variables.scss
+++ b/themes/adidoks/sass/common/_variables.scss
@@ -117,7 +117,7 @@ $h2-font-size:                 $font-size-base * 1.5;
 $h3-font-size:                 $font-size-base * 1.3;
 $code-font-size:              $font-size-base * 1;
 
-$line-height-base:            1.1;
+$line-height-base:            1.3;
 
 $headings-font-family:        null;
 $headings-font-weight:        400;
